fix(videos): make all the videos the same width on iphone

--- a/src/components/Filmer/Filmer.less
+++ b/src/components/Filmer/Filmer.less
@@ -10,7 +10,7 @@
         margin: 0 10px 30px;
 
         &.blocked {
-            width: calc(~"100% - 80px");
+            width: calc(~"100% - 40px");
             display: block;
             margin-left: auto;
             margin-right: auto;
